Updating Grade UI Creation

--- a/SteppingStones/src/main/webapp/styling/css/main.css
+++ b/SteppingStones/src/main/webapp/styling/css/main.css
@@ -1435,3 +1435,13 @@ footer .copy{
     }
     
 
+ /* TABLE STYLING */
+.table_title{
+   background-color: #eee;
+}
+
+.table_content{
+   background-color: #fff;
+}
+    
+
