Move location of header navbar

--- a/SteppingStones/src/main/webapp/styling/css/main.css
+++ b/SteppingStones/src/main/webapp/styling/css/main.css
@@ -622,6 +622,7 @@ footer .copy{
 .header .navbar{
    background:none !important;
    border:0px !important;
+   float: right;
 }
 
 .header .navbar i{
