solved bugs in header

--- a/SteppingStones/src/main/webapp/styling/css/main.css
+++ b/SteppingStones/src/main/webapp/styling/css/main.css
@@ -1026,6 +1026,8 @@ footer .copy{
     }
     .header .navbar {
         font-size: 11.2pt;
+        float: left !important;
+        
         margin-top: 5px !important;
     }
     .header .navbar .nav > li > a:hover{
@@ -1034,6 +1036,7 @@ footer .copy{
     }
     .header .navbar .withIcon{
         display: block;
+        margin-left: 50% !important;
     }
     .header .navbar .withWord{
         display: none;
