--- a/SteppingStones/src/main/webapp/styling/css/styles.css
+++ b/SteppingStones/src/main/webapp/styling/css/styles.css
@@ -36,7 +36,20 @@ ul, ol {
   padding-top: 25px;
 }
 .item5 { 
-  background: #f1a130;
+  background:#fffffe;
+}
+
+.title { 
+  text-transform: capitalize;  
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+  padding: 0 30px;
+  padding-top: 10px;
+}
+
+.tableContent { 
+  height: 100px;
 }
 
 /* Gridster styles */
