--- a/SteppingStones/src/main/webapp/styling/css/theme.css
+++ b/SteppingStones/src/main/webapp/styling/css/theme.css
@@ -4483,13 +4483,11 @@ section {
 
 .table-data2.table thead th {
     font-size: 12px;
-    color: #555;
+    color: #fff;
     text-transform: uppercase;
     border: none;
     font-weight: 600;
     vertical-align: top;
-    padding: 15px 40px;
-    padding-right: 10px;
 }
 
 .table-data2.table thead th:first-child {
@@ -4538,7 +4536,7 @@ section {
     font-size: 14px;
     color: #808080;
     vertical-align: middle;
-    padding: 25px 40px;
+    padding: 5px 14px;
     padding-right: 10px;
     border: none;
 }
